--- a/Projet_robot_labyrinthe/observateurtest.cbp
+++ b/Projet_robot_labyrinthe/observateurtest.cbp
@@ -32,7 +32,20 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Unit filename="Affichage.cpp" />
+		<Unit filename="Affichage.h" />
+		<Unit filename="Case.cpp" />
+		<Unit filename="Case.h" />
+		<Unit filename="Labyrinthe.cpp" />
+		<Unit filename="Labyrinthe.h" />
+		<Unit filename="Observateur.cpp" />
+		<Unit filename="Observateur.h" />
+		<Unit filename="Robot.cpp" />
+		<Unit filename="Robot.h" />
+		<Unit filename="goto_xy_windows.cpp" />
+		<Unit filename="goto_xy_windows.h" />
+		<Unit filename="maintest.cpp" />
+		<Unit filename="observateurtest.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
