--- a/Projet_robot_labyrinthe/casetest.cbp
+++ b/Projet_robot_labyrinthe/casetest.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="robottest" />
+		<Option title="casetest" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/robottest" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/casetest" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/robottest" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/casetest" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,18 +32,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="Affichage.cpp" />
-		<Unit filename="Affichage.h" />
 		<Unit filename="Case.cpp" />
 		<Unit filename="Case.h" />
-		<Unit filename="Labyrinthe.cpp" />
-		<Unit filename="Labyrinthe.h" />
-		<Unit filename="Robot.cpp" />
-		<Unit filename="Robot.h" />
-		<Unit filename="goto_xy_windows.cpp" />
-		<Unit filename="goto_xy_windows.h" />
+		<Unit filename="Casetest.cpp" />
 		<Unit filename="maintest.cpp" />
-		<Unit filename="robottest.cpp" />
-		<Extensions />
+		<Extensions>
+			<lib_finder disable_auto="1" />
+		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
