--- a/Projet_robot_labyrinthe/Projet_robot_labyrinthe.cbp
+++ b/Projet_robot_labyrinthe/Projet_robot_labyrinthe.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-frtti" />
 					<Add directory="./" />
 				</Compiler>
 			</Target>
